--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,6 @@ variables:
   DOCKER_HOST: tcp://docker:2376
   DOCKER_TLS_CERTDIR: "/certs"
   DOCKER_DRIVER: overlay2
-  # Set default platform; adjust if you configure multi-arch buildx
-  DOCKER_DEFAULT_PLATFORM: linux/amd64
   SECRET_DETECTION_ENABLED: 'true'
 
 secret_detection:
@@ -47,13 +45,6 @@ build-and-push:
         exit 1
       fi
     - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-    # Ensure buildx builder exists and is in use
-    - |
-      if ! docker buildx inspect builder >/dev/null 2>&1; then
-        docker buildx create --name builder --use
-      else
-        docker buildx use builder
-      fi
   script:
     - |
       set -euo pipefail
@@ -77,9 +68,7 @@ build-and-push:
         fi
       fi
       echo "Will push tags: ${TAGS[*]}"
-      # Build and push
-      docker buildx build \
-        --platform "${DOCKER_DEFAULT_PLATFORM}" \
+      docker build \
         --file Dockerfile \
         $(printf -- ' -t %q' "${TAGS[@]}") \
         --push \
