--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,9 @@ build-and-push:
       command: ["--mtu=1460"]
   stage: build
   rules:
+    # Skip build on chore commits
+    - if: '$CI_COMMIT_MESSAGE =~ /^chore:/'
+      when: never
     # Run on default branch, tags, and merge requests
     - if: '$CI_COMMIT_TAG'
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
