--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,7 @@ build-and-push:
     # Skip build on chore commits
     - if: '$CI_COMMIT_MESSAGE =~ /^chore:/'
       when: never
-    # Run on default branch, tags, and merge requests
-    - if: '$CI_COMMIT_TAG'
+    # Run on default branch and merge requests
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     - if: '$CI_COMMIT_BRANCH'
   before_script:
