--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,12 @@
 #
 # Tagging strategy:
 # - latest on default branch
-# - <git tag> on tagged commits
+# - version from a VERSION file on default branch
 # - sha-<shortsha> on all commits
 
 stages:
   - secret-detection
+  - lint
   - build
 
 
@@ -26,12 +27,7 @@ secret_detection:
 include:
   - template: Security/Secret-Detection.gitlab-ci.yml
 
-build-and-push:
-  image: docker:28.4.0
-  services:
-    - name: docker:28.4.0-dind
-      command: ["--mtu=1460"]
-  stage: build
+.release-rules:
   rules:
     # Skip build on chore commits
     - if: '$CI_COMMIT_MESSAGE =~ /^chore:/'
@@ -39,6 +35,41 @@ build-and-push:
     # Run on default branch and merge requests
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     - if: '$CI_COMMIT_BRANCH'
+
+format-check:
+  extends: .release-rules
+  image: python:3.13-slim
+  stage: lint
+  before_script:
+    - pip install --no-cache-dir -r requirements-dev.txt
+  script:
+    - ruff format --check .
+
+lint:
+  extends: .release-rules
+  image: python:3.13-slim
+  stage: lint
+  before_script:
+    - pip install --no-cache-dir -r requirements-dev.txt
+  script:
+    - ruff check .
+
+type-check:
+  extends: .release-rules
+  image: python:3.13-slim
+  stage: lint
+  before_script:
+    - pip install --no-cache-dir -r requirements.txt -r requirements-dev.txt
+  script:
+    - mypy gopro_immich_uploader'
+
+build-and-push:
+  extends: .release-rules
+  image: docker:28.4.0
+  services:
+    - name: docker:28.4.0-dind
+      command: ["--mtu=1460"]
+  stage: build
   before_script:
     - apk add --no-cache bash
     - |
